compiler/kernc_cli/tests/soundness/run-pass/coherence/where_bound_specific_impl_method_selected.rn
// class: specialization-dispatch
// source: same-head impl methods may specialize by strictly stronger where-clause requirements
// exit: 0

trait Need {};
impl i32 : Need {}

struct Box[T] {
    value: T,
};

impl[T] Box[T] {
    fn score() i32 {
        return 1;
    }
}

impl[T] Box[T] where T: Need {
    fn score() i32 {
        return 2;
    }
}

fn main() i32 {
    return Box[i32].{ value: 1 }.score() - 2;
}
